# pokerbench

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
docs/: PERSONAS.md  PROPOSAL_ALIGNMENT.md
pokerbench/: __init__.py  config.py  evaluation.py  hand_strength.py  personas.py  random_player.py  tracing.py
samples/: README.md  benchmark_summary.json  game_persona_demo.json
scripts/: check_api.py  evaluate.py  run_benchmark.py
test_results/: test_match_v1.json
tests/: test_hand_strength.py  test_personas.py  test_run_reproducible.py
traces/: game_20260223_152921.json  game_20260223_152931.json  game_20260223_152941.json  game_20260223_152951.json  game_20260223_153000.json  game_20260320_102247.json  game_20260320_103442.json  game_20260320_104048.json  game_20260320_104420.json  game_20260320_104519.json  game_20260320_105029.json
